ajustei um pequeno erro no tamanho de alguns elementos.

--- a/index.html
+++ b/index.html
@@ -147,130 +147,138 @@
     <section id="secLing">
         <div>
             <div class="divLing" id="divHtml">
-                <div class="divLingPrinc">
-                    <h1>HTML</h1>
-                    <p>
-                        A linguagem para construir páginas da web
-                    </p>
-                    <a href="#" class="buttonAprenda">Aprenda HTML</a>
-                    <a href="#" class="buttonVideo">Video Tutorial</a>
-                    <a href="#" class="buttonReferen">Referência HTML</a>
-                    <a href="#" class="buttonObter">Obter certificação</a>
-                </div>
-                <div class="divLingCode">
-                    <h1>HTML Example:</h1>
-                    <div>
-                        <span>
-                            <span class="spanAzul">&lt;</span><span class="spanMarrom">!DOCTYPE</span><span class="spanVermelho"> html</span><span class="spanAzul">&gt;</span>
-                        </span><br>
-                        <span>
-                            <span class="spanAzul">&lt;</span><span class="spanMarrom">html</span><span class="spanAzul">&gt;</span>
-                        </span><br>
-                        <span>
-                            <span class="spanAzul">&lt;</span><span class="spanMarrom">head</span><span class="spanAzul">&gt;</span>
-                        </span><br>
-                        <span>
-                            <span class="spanAzul">&lt;</span><span class="spanMarrom">title</span><span class="spanAzul">&gt;</span>HTML Tutorial<span class="spanAzul">&lt;</span>/<span class="spanMarrom">title</span>&gt;</span><br>
-                        <span>
-                            <span class="spanAzul">&lt;</span><span class="spanMarrom">/head</span><span class="spanAzul">&gt;</span>
-                        </span><br>
-                        <span>
-                            <span class="spanAzul">&lt;</span><span class="spanMarrom">body</span><span class="spanAzul">&gt;</span>
-                        </span><br>
-                        <br>
-                        <span>
-                            <span class="spanAzul">&lt;</span><span class="spanMarrom">h1</span><span class="spanAzul">&gt;</span>This is a heading<span class="spanAzul">&lt;</span><span class="spanMarrom">/h1</span><span class="spanAzul">&gt;</span>
-                        </span><br>
-                        <span>
-                            <span class="spanAzul">&lt;</span><span class="spanMarrom">p</span><span class="spanAzul">&gt;</span>This is a paragraph.<span class="spanAzul">&lt;</span><span class="spanMarrom">/p</span><span class="spanAzul">&gt;</span>
-                        </span><br>
-                        <br>
-                        <span>
-                            <span class="spanAzul">&lt;</span><span class="spanMarrom">/body</span><span class="spanAzul">&gt;</span>
-                        </span><br>
-                        </span>
-                            <span class="spanAzul">&lt;</span><span class="spanMarrom">/html</span><span class="spanAzul">&gt;</span>
-                        </span>
+                <div class="divLimit">
+                    <div class="divLingPrinc">
+                        <h1>HTML</h1>
+                        <p>
+                            A linguagem para construir páginas da web
+                        </p>
+                        <a href="#" class="buttonAprenda">Aprenda HTML</a>
+                        <a href="#" class="buttonVideo">Video Tutorial</a>
+                        <a href="#" class="buttonReferen">Referência HTML</a>
+                        <a href="#" class="buttonObter">Obter certificação</a>
                     </div>
-                    <a href="#">Try it Yourself</a>
+                    <div class="divLingCode">
+                        <h1>HTML Example:</h1>
+                        <div>
+                            <span>
+                                <span class="spanAzul">&lt;</span><span class="spanMarrom">!DOCTYPE</span><span class="spanVermelho"> html</span><span class="spanAzul">&gt;</span>
+                            </span><br>
+                            <span>
+                                <span class="spanAzul">&lt;</span><span class="spanMarrom">html</span><span class="spanAzul">&gt;</span>
+                            </span><br>
+                            <span>
+                                <span class="spanAzul">&lt;</span><span class="spanMarrom">head</span><span class="spanAzul">&gt;</span>
+                            </span><br>
+                            <span>
+                                <span class="spanAzul">&lt;</span><span class="spanMarrom">title</span><span class="spanAzul">&gt;</span>HTML Tutorial<span class="spanAzul">&lt;</span>/<span class="spanMarrom">title</span>&gt;</span><br>
+                            <span>
+                                <span class="spanAzul">&lt;</span><span class="spanMarrom">/head</span><span class="spanAzul">&gt;</span>
+                            </span><br>
+                            <span>
+                                <span class="spanAzul">&lt;</span><span class="spanMarrom">body</span><span class="spanAzul">&gt;</span>
+                            </span><br>
+                            <br>
+                            <span>
+                                <span class="spanAzul">&lt;</span><span class="spanMarrom">h1</span><span class="spanAzul">&gt;</span>This is a heading<span class="spanAzul">&lt;</span><span class="spanMarrom">/h1</span><span class="spanAzul">&gt;</span>
+                            </span><br>
+                            <span>
+                                <span class="spanAzul">&lt;</span><span class="spanMarrom">p</span><span class="spanAzul">&gt;</span>This is a paragraph.<span class="spanAzul">&lt;</span><span class="spanMarrom">/p</span><span class="spanAzul">&gt;</span>
+                            </span><br>
+                            <br>
+                            <span>
+                                <span class="spanAzul">&lt;</span><span class="spanMarrom">/body</span><span class="spanAzul">&gt;</span>
+                            </span><br>
+                            </span>
+                                <span class="spanAzul">&lt;</span><span class="spanMarrom">/html</span><span class="spanAzul">&gt;</span>
+                            </span>
+                        </div>
+                        <a href="#">Try it Yourself</a>
+                    </div>
                 </div>
             </div>
             <div class="divLing" id="divCss">
-                <div class="divLingPrinc">
-                    <h1>CSS</h1>
-                    <p>
-                        A linguagem para estilizar páginas da web
-                    </p>
-                    <a href="#" class="buttonAprenda">Aprenda CSS</a>
-                    <a href="#" class="buttonReferen">Referência CSS</a>
-                    <a href="#" class="buttonObter">Obter certificação</a>
-                </div>
-                <div class="divLingCode">
-                    <h1>CSS Example:</h1>
-                    <div>
-                        <span><span class="spanMarrom">body</span> {</span><br>
-                        <span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="spanVermelho">background-color</span>: <span class="spanAzul">lightblue</span>;</span><br>
-                        <span>}</span> <br>
-                        <br>
-                        <span><span class="spanMarrom">h1</span> {</span><br>
-                        <span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="spanVermelho">color</span>: <span class="spanAzul">white</span>;</span><br>
-                        <span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="spanVermelho">text-align</span>: <span class="spanAzul">center</span>;</span><br>
-                        <span>}</span><br>
-                        <br>
-                        <span><span class="spanMarrom">p</span> {</span><br>
-                        <span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="spanVermelho">font-family</span>: <span class="spanAzul">verdana</span>;</span><br>
-                        <span>}</span>
+                <div class="divLimit">
+                    <div class="divLingPrinc">
+                        <h1>CSS</h1>
+                        <p>
+                            A linguagem para estilizar páginas da web
+                        </p>
+                        <a href="#" class="buttonAprenda">Aprenda CSS</a>
+                        <a href="#" class="buttonReferen">Referência CSS</a>
+                        <a href="#" class="buttonObter">Obter certificação</a>
                     </div>
-                    <a href="#">Try it Yourself</a>
+                    <div class="divLingCode">
+                        <h1>CSS Example:</h1>
+                        <div>
+                            <span><span class="spanMarrom">body</span> {</span><br>
+                            <span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="spanVermelho">background-color</span>: <span class="spanAzul">lightblue</span>;</span><br>
+                            <span>}</span> <br>
+                            <br>
+                            <span><span class="spanMarrom">h1</span> {</span><br>
+                            <span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="spanVermelho">color</span>: <span class="spanAzul">white</span>;</span><br>
+                            <span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="spanVermelho">text-align</span>: <span class="spanAzul">center</span>;</span><br>
+                            <span>}</span><br>
+                            <br>
+                            <span><span class="spanMarrom">p</span> {</span><br>
+                            <span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="spanVermelho">font-family</span>: <span class="spanAzul">verdana</span>;</span><br>
+                            <span>}</span>
+                        </div>
+                        <a href="#">Try it Yourself</a>
+                    </div>
                 </div>
             </div>
             <div class="divLing" id="divJs">
-                <div class="divLingPrinc">
-                    <h1>JavaScript</h1>
-                    <p>
-                        A linguagem para programar páginas da web
-                    </p>
-                    <a href="#" class="buttonAprenda">Aprenda JavaScript</a>
-                    <a href="#" class="buttonReferen">Referência JavaScript</a>
-                    <a href="#" class="buttonObter">Obter certificação</a>
-                </div>
-                <div class="divLingCode">
-                    <h1>JavaScript Example:</h1>
-                    <div>
-                        <span><span class="spanAzul">&lt;</span><span class="spanMarrom">button</span> <span class="spanVermelho">onclick</span><span class="spanAzul">="myFunction()"&gt;</span>Click Me!<span class="spanAzul">&lt;</span><span class="spanMarrom">/button</span><span class="spanAzul">&gt;</span></span><br>
-                        <br>
-                        <span><span class="spanAzul">&lt;</span><span class="spanMarrom">script</span><span class="spanAzul">&gt;</span></span><br>
-                        <span><span class="spanAzul">function</span> myFunction() {</span><br>
-                        <span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="spanAzul">let</span> x = document.getElementById(<span class="spanMarrom">"demo"</span>);</span><br>
-                        <span>&nbsp;&nbsp;&nbsp;&nbsp;x.style.fontSize = <span class="spanMarrom">"25px"</span>;</span><br>
-                        <span>&nbsp;&nbsp;&nbsp;&nbsp;x.style.color = <span class="spanMarrom">"red"</span>;</span><br>
-                        <span>}</span><br>
-                        <span><span class="spanAzul">&lt;</span><span class="spanMarrom">/script</span><span class="spanAzul">&gt;</span></span>
+                <div class="divLimit">
+                    <div class="divLingPrinc">
+                        <h1>JavaScript</h1>
+                        <p>
+                            A linguagem para programar páginas da web
+                        </p>
+                        <a href="#" class="buttonAprenda">Aprenda JavaScript</a>
+                        <a href="#" class="buttonReferen">Referência JavaScript</a>
+                        <a href="#" class="buttonObter">Obter certificação</a>
                     </div>
-                    <a href="#">Try it Yourself</a>
+                    <div class="divLingCode">
+                        <h1>JavaScript Example:</h1>
+                        <div>
+                            <span><span class="spanAzul">&lt;</span><span class="spanMarrom">button</span> <span class="spanVermelho">onclick</span><span class="spanAzul">="myFunction()"&gt;</span>Click Me!<span class="spanAzul">&lt;</span><span class="spanMarrom">/button</span><span class="spanAzul">&gt;</span></span><br>
+                            <br>
+                            <span><span class="spanAzul">&lt;</span><span class="spanMarrom">script</span><span class="spanAzul">&gt;</span></span><br>
+                            <span><span class="spanAzul">function</span> myFunction() {</span><br>
+                            <span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="spanAzul">let</span> x = document.getElementById(<span class="spanMarrom">"demo"</span>);</span><br>
+                            <span>&nbsp;&nbsp;&nbsp;&nbsp;x.style.fontSize = <span class="spanMarrom">"25px"</span>;</span><br>
+                            <span>&nbsp;&nbsp;&nbsp;&nbsp;x.style.color = <span class="spanMarrom">"red"</span>;</span><br>
+                            <span>}</span><br>
+                            <span><span class="spanAzul">&lt;</span><span class="spanMarrom">/script</span><span class="spanAzul">&gt;</span></span>
+                        </div>
+                        <a href="#">Try it Yourself</a>
+                    </div>
                 </div>
             </div>
             <div class="divLing" id="divPy">
-                <div class="divLingPrinc">
-                    <h1>Python</h1>
-                    <p>
-                        Uma linguagem de programação popular
-                    </p>
-                    <a href="#" class="buttonAprenda">Aprenda Python</a>
-                    <a href="#" class="buttonReferen">Referência Python</a>
-                    <a href="#" class="buttonObter">Obter certificação</a>
-                </div>
-                <div class="divLingCode">
-                    <h1>Python Example:</h1>
-                    <div class="PaddingPySQL">
-                        <span><span class="spanAzul">if</span> <span class="spanVermelho">5</span> &gt; <span class="spanVermelho">2</span>:</span><br>
-                        <span>&nbsp;&nbsp;&nbsp;&nbsp;print(<span class="spanMarrom">"Five is greater than two!"</span>)</span>
+                <div class="divLimit">
+                    <div class="divLingPrinc">
+                        <h1>Python</h1>
+                        <p>
+                            Uma linguagem de programação popular
+                        </p>
+                        <a href="#" class="buttonAprenda">Aprenda Python</a>
+                        <a href="#" class="buttonReferen">Referência Python</a>
+                        <a href="#" class="buttonObter">Obter certificação</a>
                     </div>
-                    <a href="#">Try it Yourself</a>
+                    <div class="divLingCode">
+                        <h1>Python Example:</h1>
+                        <div class="PaddingPySQL">
+                            <span><span class="spanAzul">if</span> <span class="spanVermelho">5</span> &gt; <span class="spanVermelho">2</span>:</span><br>
+                            <span>&nbsp;&nbsp;&nbsp;&nbsp;print(<span class="spanMarrom">"Five is greater than two!"</span>)</span>
+                        </div>
+                        <a href="#">Try it Yourself</a>
+                    </div>
                 </div>
             </div>
             <div class="divLing" id="divSql">
-                <div id="divLimit">
+                <div class="divLimit">
                     <div class="divLingPrinc">
                         <h1>SQL</h1>
                         <p>
