adicionei um favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste - W3Schools (NÃO É OFICIAL)</title>
+    <title>Teste - W3Schools(NÃO É OFICIAL)</title>
+    <link rel="shortcut icon" href="arquivos/imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="arquivos/style.css">
     <link rel="stylesheet" href="arquivos/mediaqueryHeader.css">
