mudei o nome das imagens do monitor

--- a/index.html
+++ b/index.html
@@ -628,9 +628,9 @@
             </div>
             <div id="BordaMonitor">
                 <div id="img-content">
-                    <img class="imgSlide primeiro" src="arquivos/imagens/slide1.jpg" alt="">
-                    <img class="imgSlide" src="arquivos/imagens/slide2.jpg" alt="">
-                    <img class="imgSlide" src="arquivos/imagens/slide3.jpg" alt="">
+                    <img class="imgSlide primeiro" src="arquivos/imagens/img_nature_wide.jpg" alt="">
+                    <img class="imgSlide" src="arquivos/imagens/img_snow_wide.jpg" alt="">
+                    <img class="imgSlide" src="arquivos/imagens/img_mountains_wide.jpg" alt="">
                 </div>
                 <div id="passarSetas" style="display: none;">
                     <div id="setaLeft" onclick="setaL()">
