--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 Este site NÃO É OFICIAL!
             </h2>
             <p>
-                Este site é apenas uma demonstração de como desenvolvo sites com HTML e CSS. No momento, desenvolvi o site adaptativo até <a href="#aqui">AQUI</a>.
+                Este site é uma demonstração de como desenvolvo sites com HTML, CSS e JavaScript.
             </p>
             <p>
                 Este site foi desenvolvido por <a href="https://github.com/faraotis">FARAOTIS</a>.
