--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="divLing" id="divJs">
                 <div class="divLimit">
                     <div class="divLingPrinc">
-                        <h1 style="font-size: 5em;">JavaScript</h1>
+                        <h1>JavaScript</h1>
                         <p>
                             A linguagem para programar páginas da web
                         </p>
