Mudei o title, Link para home, e comecei a fazer a pagina login

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste - W3Schools(NÃO É OFICIAL)</title>
+    <title>Faraotis | W3Schools</title>
     <link rel="shortcut icon" href="arquivos/imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="arquivos/style.css">
@@ -123,7 +123,7 @@
                 Este site é uma demonstração de como desenvolvo sites com HTML, CSS e JavaScript.
             </p>
             <p>
-                Este site foi desenvolvido por <a href="https://github.com/faraotis">FARAOTIS</a>.
+                Este site foi desenvolvido por <a href="https://github.com/faraotis">FARAOTIS</a>.<br>Visite Minha Página<a href="https://faraotis.github.io/home/">Home</a>.
             </p>
             <p id="site-oficial">
                 Visite o site oficial <a href="https://www.w3schools.com/">w3schools</a>.
