--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 Este site NÃO É OFICIAL!
             </h2>
             <p>
-                Este site é uma demonstração de como desenvolvo sites com HTML, CSS e JavaScript.
+                Este site foi um projeto que fiz para estudo em HTML, CSS e JavaScript.
             </p>
             <p>
                 Este site foi desenvolvido por <a href="https://github.com/faraotis">FARAOTIS</a>.<br>Visite Minha Página<a href="https://faraotis.github.io/home/">Home</a>.
